# xlsx-diff

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: diff.rs  mod.rs  parse.rs
test/: new.xlsx  old.xlsx
wasm/: .gitignore  build.js  index.js  package.json
wasm/env/bundler/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts
wasm/env/nodejs/: index.d.ts  index.js  index_bg.wasm
wasm/env/web/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts
wasm/rust/: cargo.toml
wasm/rust/src/: lib.rs
