[package]
name = "xlsx-diff"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vales98/xlsx-diff"
description = "a libray for comparing differences between two XLSX files"
authors = ["vales98"]

[dependencies]
calamine = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"

[lib]
path = "src/lib.rs"

[[bin]]
name = "xlsx_diff"
path = "src/main.rs"